# Olympic-Medals-Taipy-App

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dockerfile  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: lint.yml  security.yml  tests.yml
src/: main.py  requirements.txt
src/algorithms/: __init__.py  callbacks.py  context.py  create_medal_by_olympic_and_discipline.py  create_medals_by_country.py  create_medals_by_olympics.py  create_medals_by_season.py  create_olympic_map.py  create_sunburst.py  medal_details.py  plotting_all_time.py  plotting_medals_by_committee.py  read_parameters.py
src/callbacks/: __init__.py  callbacks.py
src/context/: __init__.py  context.py
src/data/: grouped_medals.parquet  grouped_medals_olympiads.parquet  medals_by_olympiad.parquet  olympic_cities.csv  olympic_cities.parquet  olympic_cities_simplified.parquet  olympic_medals.csv  olympic_medals.parquet  total_medals_by_olympiad_and_committee.parquet
src/original_data/: olympic_cities.csv
src/page_modules/: __init__.py  page_functions.py
src/page_utils/: builder_extension.py
src/pages/: all_time_medals.py  info_medals_by_committee.md  medals_by_athlete.py  medals_by_committee.py
src/parameters/: gender_category_colors.py  list_committees.yml  list_olympiads.yml  medal_colors.py
tests/: conftest.py  test_create_medal_by_olympic_and_discipline.py  test_create_medals_by_country.py  test_create_medals_by_olympics.py  test_create_medals_by_season.py  test_create_olympic_map.py  test_create_sunburst.py  test_read_parameters.py
(+1 files in other folders)
